# artcode

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.deps.md  README.md  aot_plan.artifact.json  aot_plan.json  aot_plan.normalized.json  calibration_suggestion.json  docs.html  install.sh  lcov.info  perf.md  profile.json  test_generics.art  test_output.txt  trace.artlog
cli/: .art-lock  Cargo.toml
cli/examples/: 03_control_flow.art  04_functions_closures.art  05_structs_enums_match.art  07_pattern_matching_guards.art  10_result_like_pattern_try.art  11_arrays_builtin_methods.art  12_metrics_demo.art  13_weak_cycle_demo.art  14_cycle_stub.art  14_finalizer_examples.art  15_finalizer_examples.art  16_weak_unowned_demo.art  17_metrics_arena_demo.art  99_weak_unowned_demo.art  README.md  arr_opt.art  artvalue.art  control_flow.art  hello.art  match.art  math.art  metrics_arena_demo.art  numbers.art  performant_bad.art  result.art  struct_enum.art  variables.art
cli/examples/_outputs/: .gitignore  main.ir  sum_down.ir  sum_work.ir
cli/examples/advanced/: enums_match.art  struct_enum.art
cli/examples/basics/: arr_opt.art  artvalue.art  control_flow.art  hello.art  math.art  numbers.art  variables.art
cli/examples/modules/demo/: lib.art  (+1 more)
cli/src/: aot.rs  docgen.rs  formatter.rs  linter.rs  lsp.rs  main.rs  resolver.rs  std_doc.rs
cli/tests/: actor_http_runtime.rs  add_git.rs  add_local.rs  cache_resolution.rs  closures_callbacks_arc.rs  examples_modules.rs  idl_ipc.rs  lint_memory_hint.rs  lint_weak_unowned_semantics.rs  lockfile_resolution.rs  metrics_integration.rs  metrics_values.rs  parallel_resolution.rs  pipeline_operator.rs  profile_build_integration.rs  pure_mode.rs  resolver.rs  reusable_arena_stdlib.rs  shell_function_call.rs  shell_syntax.rs  std_doc.rs  stream_pipeline.rs  upgrade.rs
crates/interpreter/: Cargo.toml
crates/interpreter/benches/: front.rs  perf.rs
crates/interpreter/src/: environment.rs  field_access.rs  fstring.rs  heap.rs  heap_utils.rs  interpreter.rs  lib.rs  replayer.rs  test_helpers.rs  tracer.rs  type_infer.rs  type_registry.rs  values.rs
crates/interpreter/tests/: actors_mvp.rs  actors_stress.rs  arena_basic.rs  arena_cleanup.rs  arena_finalizer_edgecases.rs  arena_finalizer_harden.rs  arena_finalizer_metrics.rs  arena_finalizer_ordering.rs  atomic_mutex.rs  atomic_mutex_edgecases.rs  atomic_mutex_send_safety.rs  atomic_mutex_send_safety_propagation.rs  atomic_overflow.rs  capability_tokens.rs  custom_iterator.rs  cycle_report.rs  dag_topo_sort.rs  decrement_paths_exhaustive.rs  decrement_paths_more.rs  decrement_paths_stress.rs  detect_cycles.rs  enum_ambiguous.rs  enum_type_arity.rs  envelope_builtin.rs  field_mutation_finalizer.rs  finalizer.rs  finalizer_decrement_coverage.rs  finalizer_decrement_paths.rs  finalizer_rebind_promotion.rs  finalizer_reentrant.rs  finalizer_skip.rs  heap_drop.rs  heap_object.rs  idl_ipc.rs  integration_example_13.rs  integration_example_14.rs  integration_example_99.rs  make_envelope_builtin.rs  match.rs  objects_finalized.rs  (+25 more)
crates/jit/: Cargo.toml  README.md
crates/jit/.artcache/: exttest_43256_14654d232fe62220.ll  exttest_44968_14654d232fe62220.c  test_44968_cf1f415112196ea8.ll
crates/jit/src/: aot_consumer.rs  aot_inspect.rs  cache.rs  ir_analyzer.rs  ir_loader.rs  lib.rs  llvm_builder.rs  trampolines.rs
crates/jit/tests/: cache.rs  ir_loader.rs  ir_loader_negative.rs  jit_smoke.rs  smoke_jit.rs  trampolines.rs
fuzz/: Cargo.toml  ast_dump.txt  crash.art
fuzz/cargo_fuzz/: Cargo.toml
fuzz/tests/: proptest_fuzz.rs
fuzzing/: Cargo.toml
fuzzing/corpus/parser_loops/: seed_loop.art
fuzzing/fuzz_targets/: parser_loops.rs
(+222 files in other folders)
