
[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "art"
path = "src/main.rs"

[dependencies]
lexer = { path = "../crates/lexer" }
parser = { path = "../crates/parser" }
interpreter = { path = "../crates/interpreter" }
diagnostics = { path = "../crates/diagnostics" }
core = { path = "../crates/core" }
ir = { path = "../crates/ir" }

clap = { version = "4.5.4", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "4.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.5"
