[package]
name = "artcode-cargo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lexer = { path = "../crates/lexer" }
parser = { path = "../crates/parser" }
interpreter = { path = "../crates/interpreter" }

[[bin]]
name = "parser_loops"
path = "fuzz_targets/parser_loops.rs"
test = false
doc = false
bench = false
