[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
diagnostics = { path = "../diagnostics" }

[dev-dependencies]
criterion = { version = "0.5", features=["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "front"
harness = false
