[package]
name = "jit"
version = "0.1.0"
edition = "2021"

[lib]
name = "jit"
path = "src/lib.rs"

# This crate is optional and should be compiled with `--features jit` when LLVM/inkwell
# is available on the developer machine or CI runner.

[features]
# feature flag placeholder. Implementations depending on `inkwell` should be behind
# this feature to avoid imposing LLVM on all contributors.
jit = ["inkwell"]

[dependencies]
# inkwell is optional and enabled via the `jit` feature
# NOTE: building with this feature requires LLVM dev libs available on the system.
inkwell = { version = "0.1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
ir = { path = "../ir" }

[[bin]]
name = "aot_inspect"
path = "src/aot_inspect.rs"

[[bin]]
name = "aot_consumer"
path = "src/aot_consumer.rs"
